fixing overflow coverpage

--- a/app/assets/stylesheets/general/general.css.scss
+++ b/app/assets/stylesheets/general/general.css.scss
@@ -39,8 +39,21 @@ a{
 }
 
   .home{
-  	overflow:hidden;
-  }
+	background-image: image-url('volunteer3.jpg');
+/* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1050px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+	}
 /**This is to fix the image in the show page when mobile **/
   .showimage{
 	margin-top:0px;
